kubernetes-gateway-api-hands-on/exercises/01-gatewayclass-and-gateway/exercise/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: ________
spec:
  controllerName: ________
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ________
  namespace: ________
spec:
  gatewayClassName: ________
  listeners:
    - name: http
      protocol: ________
      port: ________
      hostname: "________"
      allowedRoutes:
        namespaces:
          from: ________
